# UtilityPapyrusFunctions

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
include/: PCH.h  papyrusActor.h  papyrusFactions.h  papyrusVerification.h  papyrusWeapons.h
src/: main.cpp  papyrusActor.cpp  papyrusFactions.cpp  papyrusVerification.cpp  papyrusWeapons.cpp
